Revision history for Perl extension HTTP::Headers::ActionPack

    - Fix tests that were broken in the absence of HTTP::Message::PSGI

0.05 Mon. Nov. 26th, 2012
    - fixed the HTTP::Message::PSGI errors
    - when you inflate a header object that has already 
      been inflated, ignore that header and keep looping
        - thanks to Florian Ragwitz for spoting this

0.04 Sun. Sept. 9th, 2012
    - pulling the content negotiation out of
      Web::Machine and moving it into here
        - adding tests accordingly

0.03 Tues. June 19th, 2012
    - make sure everything has $VERSION numbers

0.02 Sun. June 17th, 2012
    - forgot to add some dependencies

0.01 Tues. June 12th, 2012
    - First release