@@ -42,6 +42,10 @@ sub as_string {
 
 sub add {
     my ($self, $q, $choice) = @_;
+    # XXX - should failure to canonicalize be an error? or should
+    # canonicalize_choice itself throw an error on bad values?
+    $choice = $self->canonicalize_choice($choice)
+        or return;
     $q += 0; # be sure to numify this
     $self->index->{ $choice } = $q;
     $self->items->{ $q } = [] unless exists $self->items->{ $q };
@@ -61,6 +65,8 @@ sub get {
 
 sub priority_of {
     my ($self, $choice) = @_;
+    $choice = $self->canonicalize_choice($choice)
+        or return;
     $self->index->{ $choice };
 }
 
@@ -70,6 +76,10 @@ sub iterable {
         my $q = $_;
         map { [ $q, $_ ] } @{ $self->items->{ $q } }
     } reverse sort keys %{ $self->items };
+}
+
+sub canonicalize_choice {
+    return $_[1];
 }
 
 1;
@@ -130,6 +140,13 @@ quality of it.
 This returns a list of two item ARRAY refs with the
 quality as the first item and the associated choice
 as the second item. These are sorted accordingly.
+
+When two items have the same priority, they are returned
+in the order that they were found in the header.
+
+=item C<canonicalize_choice>
+
+By default, this does nothing. It exists so that subclasses can override it.
 
 =back
 
